feat: Add FastAPI layer and custom Telegram integration

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,41 @@
-# Twitter API Credentials
-TWITTER_API_KEY=your_twitter_api_key
-TWITTER_API_SECRET=your_twitter_api_secret
+# API Configuration
+API_HOST=0.0.0.0
+API_PORT=8000
+API_RELOAD=true
 
-# GMGN API (Token Launch Tracking)
-GMGN_API_KEY=your_gmgn_api_key
+# External API Keys
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
 
-# PumpFun API (Token Launch Tracking)
-PUMPFUN_API_KEY=your_pumpfun_api_key
+TELEGRAM_BOT_TOKEN=
 
-# Solana Configuration
-SOLANA_RPC_URL=https://api.devnet.solana.com
-SOLANA_WALLET_PRIVATE_KEY=your_wallet_private_key
+# Solana API Keys
+GMGN_API_KEY=
+PUMPFUN_API_KEY=
+SOLANA_SNIFFER_API_KEY=
 
-# SolanaSniffer API (Token Safety)
-SOLANASNIFFER_API_KEY=your_solanasniffer_api_key
-
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-
-# Trading Parameters
+# Trading Configuration
 MAX_TRADE_AMOUNT=1.0
 DEFAULT_SLIPPAGE=1.0
-STOP_LOSS_PERCENTAGE=20
-TAKE_PROFIT_PERCENTAGE=50
+STOP_LOSS_PERCENTAGE=5.0
+TAKE_PROFIT_PERCENTAGE=10.0
+MAX_CONCURRENT_TRADES=3
+MAX_DAILY_LOSS=5.0
 
-# System Configuration
-LOG_LEVEL=INFO
-AUTO_SNIPE=true
-SCAN_INTERVAL=10  # seconds
-CHECK_INTERVAL=5  # seconds
+# System Settings
+OPERATING_MODE=monitor  # monitor/auto
+SCAN_INTERVAL=60  # seconds
+LOG_LEVEL=info
+DATA_RETENTION_DAYS=30
+
+# WebSocket Configuration
+WS_HEARTBEAT_INTERVAL=30  # seconds
+
+# Database Configuration (for future use)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=groksolbot
+DB_USER=
+DB_PASSWORD=
